--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,23 +32,23 @@ jobs:
 #    -
 #      name: Set up Docker Buildx
 #      uses: docker/setup-buildx-action@v1
-#    -
-#      name: Build and push
-#      uses: docker/build-push-action@v2
-#      with:
-#        context: .
-#        file: ./Dockerfile
-#        push: true
-#        tags: ${{ secrets.DOCKERHUB_USERNAME }}/myresumeapp:latest
-
-    - name: Build and push Docker image
-      uses: mr-smithers-excellent/docker-build-push@v5
+    -
+      name: Build and push
+      uses: docker/build-push-action@v2
       with:
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/myresumeapp:latest
+
+ #   - name: Build and push Docker image
+ #     uses: mr-smithers-excellent/docker-build-push@v5
+ #     with:
        # Name of the Docker image
-          image: memikaqandolli/myresumeapp
+ #         image: memikaqandolli/myresumeapp
         # Target Docker registry
-          registry: docker.io
+  #        registry: docker.io
         # Docker registry username
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #        username: ${{ secrets.DOCKERHUB_USERNAME }}
         # Docker registry password
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+  #        password: ${{ secrets.DOCKERHUB_TOKEN }}
