--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [ master ]
 
+defaults:
+  run:
+    working-directory: .
+    
 jobs:
   build:
 
@@ -29,9 +33,6 @@ jobs:
       with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
- #   -
- #     name: Set up Docker Buildx
- #     uses: docker/setup-buildx-action@v1
     -
       name: Build and push
       uses: docker/build-push-action@v2
@@ -40,15 +41,3 @@ jobs:
         file: Dockerfile
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/myresumeapp:latest
-
- #   - name: Build and push Docker image
- #     uses: mr-smithers-excellent/docker-build-push@v5
- #     with:
-       # Name of the Docker image
- #         image: memikaqandolli/myresumeapp
-        # Target Docker registry
-  #        registry: docker.io
-        # Docker registry username
-  #        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        # Docker registry password
-  #        password: ${{ secrets.DOCKERHUB_TOKEN }}
