--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -8,7 +8,7 @@ on:
 
 defaults:
   run:
-    working-directory: .
+    working-directory: /SampleWebApp2
     
 jobs:
   build:
@@ -38,6 +38,6 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: .
-        file: Dockerfile
+        file: ./Dockerfile
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/myresumeapp:latest
