--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -5,10 +5,6 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-
-defaults:
-  run:
-    working-directory: /app
     
 jobs:
   build:
@@ -37,7 +33,7 @@ jobs:
       name: Build and push
       uses: docker/build-push-action@v2
       with:
-        context: .
-        file: ./Dockerfile
+        context: ./app
+        file: app/Dockerfile
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/myresumeapp:latest
