--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,6 +29,10 @@ jobs:
       with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+          
+    - name: Docker Setup Buildx
+      uses: docker/setup-buildx-action@v1.6.0  
+      
     -
       name: Build and push
       uses: docker/build-push-action@v2
