--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -37,7 +37,7 @@ jobs:
       name: Build and push
       uses: docker/build-push-action@v2
       with:
-        context: ./app
-        file: app/Dockerfile
+#        context: .
+#        file: ./Dockerfile
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/myresumeapp:latest
