--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,11 +33,11 @@ jobs:
     - name: Docker Setup Buildx
       uses: docker/setup-buildx-action@v1.6.0  
       
-    -
-      name: Build and push
-      uses: docker/build-push-action@v2
-      with:
+#    -
+#      name: Build and push
+#      uses: docker/build-push-action@v2
+#      with:
 #        context: .
 #        file: ./Dockerfile
-        push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/myresumeapp:latest
+#        push: true
+#        tags: ${{ secrets.DOCKERHUB_USERNAME }}/myresumeapp:latest
