--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,14 +30,14 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
           
-    - name: Docker Setup Buildx
-      uses: docker/setup-buildx-action@v1.6.0  
+ #   - name: Docker Setup Buildx
+ #     uses: docker/setup-buildx-action@v1.6.0  
       
-#    -
-#      name: Build and push
-#      uses: docker/build-push-action@v2
-#      with:
-#        context: .
-#        file: ./Dockerfile
-#        push: true
-#        tags: ${{ secrets.DOCKERHUB_USERNAME }}/myresumeapp:latest
+    -
+      name: Build and push
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/myresumeapp:latest
