--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -37,7 +37,11 @@ jobs:
       name: Build and push
       uses: docker/build-push-action@v2
       with:
-        context: .
+        context: ./
         file: ./Dockerfile
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/myresumeapp:latest
+
+
+    - name: Image digest
+      run: echo ${{ steps.docker_build.outputs.digest }}
