--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,8 +30,8 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
           
- #   - name: Docker Setup Buildx
- #     uses: docker/setup-buildx-action@v1.6.0  
+    - name: Docker Setup Buildx
+      uses: docker/setup-buildx-action@v1.6.0  
       
     -
       name: Build and push
