--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,24 +24,48 @@ jobs:
     - name: Test
       run: dotnet test --no-build --verbosity normal
 
-    - name: Docker Login
-      uses: docker/login-action@v1.12.0
-      with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+#    - name: Docker Login
+#      uses: docker/login-action@v1.12.0
+#      with:
+#          username: ${{ secrets.DOCKERHUB_USERNAME }}
+#          password: ${{ secrets.DOCKERHUB_TOKEN }}
           
-    - name: Docker Setup Buildx
-      uses: docker/setup-buildx-action@v1.6.0  
-      
-    -
-      name: Build and push
-      uses: docker/build-push-action@v2
+#    - name: Docker Setup Buildx
+#      uses: docker/setup-buildx-action@v1.6.0  
+#      - name: Publish Docker
+
+# You may pin to the exact commit or the version.
+  # uses: elgohr/Publish-Docker-Github-Action@191af57e15535d28b83589e3b5f0c31e76aa8733
+    - name: Publish Docker
+      uses: elgohr/Publish-Docker-Github-Action@3.04
       with:
-        context: ./
-        file: ./Dockerfile
-        push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/myresumeapp:latest
+    # The name of the image you would like to push
+         name: testimage 
+    # The login username for the registry
+         username: ${{ secrets.DOCKERHUB_USERNAME }}
+    # The login password for the registry
+         password: ${{ secrets.DOCKERHUB_TOKEN }}
+    # Use registry for pushing to a custom registry
+         registry: docker.io
+    # Use dockerfile when you would like to explicitly build a Dockerfile
+       # dockerfile: # optional
+    # Use workdir when you would like to change the directory for building
+       # workdir: # optional
+    # Use context when you would like to change the Docker build context.
+        # context: # optional
+    # Use buildargs when you want to pass a list of environment variables as build-args
+    # Use tags when you want to bring your own tags (separated by comma)
+         tags: ${{ secrets.DOCKERHUB_USERNAME }}/myresumeapp:latest
+
+#    -
+#      name: Build and push
+#      uses: docker/build-push-action@v2
+#      with:
+#        context: ./
+#        file: ./Dockerfile
+#        push: true
+#        tags: ${{ secrets.DOCKERHUB_USERNAME }}/myresumeapp:latest
 
 
-    - name: Image digest
-      run: echo ${{ steps.docker_build.outputs.digest }}
+ #   - name: Image digest
+ #     run: echo ${{ steps.docker_build.outputs.digest }}
