--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,9 +26,6 @@ jobs:
       
   build-and-push-docker-image:
     name: Build Docker image and push to repositories
-    defaults:
-      run:
-        working-directory: ./SampleWebApp2
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -48,7 +45,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: ./
+          context: ./SampleWebApp2
           file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/myresumeapp:latest
