--- a/SampleWebApp2/Dockerfile
+++ b/SampleWebApp2/Dockerfile
@@ -7,8 +7,10 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
+# COPY ["SampleWebApp2/SampleWebApp2.csproj", "SampleWebApp2/"]
 COPY ["SampleWebApp2.csproj", "SampleWebApp2/"]
-RUN dotnet restore "SampleWebApp2/SampleWebApp2.csproj"
+# RUN dotnet restore "SampleWebApp2/SampleWebApp2.csproj"
+RUN dotnet restore "SampleWebApp2.csproj"
 COPY . .
 WORKDIR "/src/SampleWebApp2"
 RUN dotnet build "SampleWebApp2.csproj" -c Release -o /app/build
