--- a/SampleWebApp2/Dockerfile
+++ b/SampleWebApp2/Dockerfile
@@ -2,21 +2,21 @@
 
 FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS base
 WORKDIR /app
-EXPOSE 80
-EXPOSE 443
+#EXPOSE 80
+#EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
-# COPY ["SampleWebApp2/SampleWebApp2.csproj", "SampleWebApp2/"]
+#COPY ["SampleWebApp2/SampleWebApp2.csproj", "SampleWebApp2/"]
 COPY ["SampleWebApp2.csproj", "SampleWebApp2/"]
-# RUN dotnet restore "SampleWebApp2/SampleWebApp2.csproj"
-RUN dotnet restore "SampleWebApp2.csproj"
-COPY . .
-WORKDIR "/src/SampleWebApp2"
-RUN dotnet build "SampleWebApp2.csproj" -c Release -o /app/build
+RUN dotnet restore "SampleWebApp2/SampleWebApp2.csproj"
+# RUN dotnet restore "SampleWebApp2.csproj"
+COPY . ./SampleWebApp2
+# WORKDIR "/src/SampleWebApp2"
+ RUN dotnet build "./SampleWebApp2/SampleWebApp2.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "SampleWebApp2.csproj" -c Release -o /app/publish
+RUN dotnet publish "./SampleWebApp2/SampleWebApp2.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
